--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
             <h2><a href="recipes/man-eating-fruit-tart.html" target="_self">Man Eating Fruit Tart</a></h2>
         </p>
 
+        <p>
+            <h2><a href="recipes/roasted-red-dragon.html" target="_self">Roasted Red Dragon</a></h2>
+        </p>
+
+        <p>
+            <h2><a href="recipes/griffin-soup.html" target="_self">Griffin Soup</a></h2>
+        </p>
+
     </body>
 
 
