Fill out third recipe page and add final touches to index.
- Finished Roasted Red Dragon recipe page
- Added images to Index page
- Fixed typos and added final touches

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     </head>
 
     <body>
-        <h1>Dungeon Meshi Recipes</h1>
+        <h1>Dungeon Meshi Recipe Book</h1>
         
         <p>
             <h2><a href="recipes/man-eating-fruit-tart.html" target="_self">Man Eating Fruit Tart</a></h2>
         </p>
+        <img src="recipe-images/man-eating-fruit-tart.webp" alt="image of man eating fruit tart" width="300">
 
         <p>
             <h2><a href="recipes/roasted-red-dragon.html" target="_self">Roasted Red Dragon</a></h2>
         </p>
+        <img src="recipe-images/red-dragon-roast-beef.webp" alt="image of roasted red dragon meat" width="300">
 
         <p>
             <h2><a href="recipes/griffin-soup.html" target="_self">Griffin Soup</a></h2>
         </p>
+        <img src="recipe-images/griffin-soup.webp" alt="image of griffin soup" width="300">
 
+        <p><img src="recipe-images/nakama-02.jpg" alt="cute image of Laios, Farin, Senshi, Marcille and Chilchuck" width="600"></p>
     </body>
 
 
