--- a/recipes/griffin-soup.html
+++ b/recipes/griffin-soup.html
@@ -15,8 +15,8 @@
         <p>
             <ul>
                 <li>Griffin meat (shoulder or thigh).....1 chunk</li>
-                <li>Water.....adequate amount</li>
-                <li>Salt.....adequate amount</li>
+                <li>Water.....eyeball the amount</li>
+                <li>Salt.....eyeball the amount</li>
             </ul>
         </p>
         <p><h2>Directions</h2></p>
