--- a/recipes/man-eating-fruit-tart.html
+++ b/recipes/man-eating-fruit-tart.html
@@ -28,7 +28,7 @@
      <p>
         <ol>
             <li>Lightly steam the Meeroak fruit.</li>
-            <li>Cut around the steam of the Meeroak fruit and pull out the seeds.</li>
+            <li>Cut around the stem of the Meeroak fruit and pull out the seeds.</li>
             <li>Carefully peel the skin off and beat it until soft.</li>
             <li>Line your pan with the skin. The skin is to keep the tart mixture from burning.</li>
             <li>In another bowl, grind up the fruit and slowly add the Slime and Scorpion broth until the mixture is thick and smooth.</li>
