Add styles to index and all recipe pages via css file
Add styles to all three recipe pages and index

--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>Dungeon Meshi Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Dungeon Meshi Recipe Book</h1>
         <ul>
             <li>
-                <h2><a href="recipes/man-eating-fruit-tart.html" target="_self">Man Eating Fruit Tart</a></h2>
+                <h2 class="fruit-tart"><a href="recipes/man-eating-fruit-tart.html" target="_self">Man Eating Fruit Tart</a></h2>
                 <img src="recipe-images/man-eating-fruit-tart.webp" alt="image of man eating fruit tart" width="300">
             </li>
         
             <li>
-                <h2><a href="recipes/roasted-red-dragon.html" target="_self">Roasted Red Dragon</a></h2>
+                <h2 class="dragon"><a href="recipes/roasted-red-dragon.html" target="_self">Roasted Red Dragon</a></h2>
                 <img src="recipe-images/red-dragon-roast-beef.webp" alt="image of roasted red dragon meat" width="300">
             </li>
 
             <li>
-                <h2><a href="recipes/griffin-soup.html" target="_self">Griffin Soup</a></h2>
+                <h2 class="griffin"><a href="recipes/griffin-soup.html" target="_self">Griffin Soup</a></h2>
                 <img src="recipe-images/griffin-soup.webp" alt="image of griffin soup" width="300">
             </li>
         </ul>
