--- a/recipes/griffin-soup.html
+++ b/recipes/griffin-soup.html
@@ -4,16 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Griffin Soup</title>
+        <link rel="stylesheet" href="griffin-style.css">
     </head>
 
     <body>
         <h1>Griffin Soup</h1>
         <img src="../recipe-images/griffin-soup.webp" alt="Image of Griffin Soup" width="600">
-        <p>A simple soup made by boiling Griffin meat in water. In order to replicate the soup Senshi ate in his past, there is very little seasoning and prep. The griffin meat is tough and has a gamey after-taste, a common characteristic of carnivorous creatures.</p>
+        <p class="caption">A simple soup made by boiling Griffin meat in water. In order to replicate the soup Senshi ate in his past, there is very little seasoning and prep. The griffin meat is tough and has a gamey after-taste, a common characteristic of carnivorous creatures.</p>
         
         <p><h2>Ingredients</h2></p>
         <p>
-            <ul>
+            <ul class="secondary">
                 <li>Griffin meat (shoulder or thigh).....1 chunk</li>
                 <li>Water.....eyeball the amount</li>
                 <li>Salt.....eyeball the amount</li>
@@ -21,7 +22,7 @@
         </p>
         <p><h2>Directions</h2></p>
         <p>
-            <ol>
+            <ol class="secondary">
                 <li>Boil water in a pot.</li>
                 <li>Slice the griffin meat into bite sized chunks.</li>
                 <li>Sprinkle salt over the sliced griffin meat and rub it in with your hands.</li>
