--- a/recipes/man-eating-fruit-tart.html
+++ b/recipes/man-eating-fruit-tart.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Man Eating Fruit Tart</title>
+        <link rel="stylesheet" href="fruitart-style.css">
     </head>
 
     <body>
      <h1>Man Eating Fruit Tart</h1>   
 
      <img src="../recipe-images/man-eating-fruit-tart.webp" alt="image of a finished man eating fruit tart" width="600">
-     <p>A savory tart with a spicy salt and pepper kick. The pastry is made from tree fruit skins and slime is used instead of gelatin.</p>
+     <p class="caption">A savory tart with a spicy salt and pepper kick. The pastry is made from tree fruit skins and slime is used instead of gelatin.</p>
      <p><h2>Ingredients (for 3-4 servings)</for></h2></p>
      <p>
         <ul>
