--- a/recipes/roasted-red-dragon.html
+++ b/recipes/roasted-red-dragon.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Roasted Red Dragon</title>
+        <link rel="stylesheet" href="redragon-style.css">
     </head>
+
     <body>
         <h1>Roasted Red Dragon</h1>
         <img src="../recipe-images/red-dragon-roast-beef.webp" alt="Image of Red Dragon Roast Beef" width="600">
-        <p>This recipe cleverly uses the undying fire and steel-like skin of the Red Dragon. Dragon meat is tough, but this recipe brings out its unmatched flavor. </p>
+        <p class="caption">This recipe cleverly uses the undying fire and steel-like skin of the Red Dragon. Dragon meat is tough, but this recipe brings out its unmatched flavor. </p>
 
         <p><h2>Ingredients</h2></p>
         <p>
-            <ul>
+            <ul class="secondary">
                 <li>A block of Red Dragon meat.....1 kg</li>
                 <li>Wine.....50 ml</li>
                 <li>Salt & Pepper.....pinch</li>
@@ -19,7 +21,7 @@
         </p>
         <p><h2>Directions</h2></p>
         <p>
-            <ol>
+            <ol class="secondary">
                 <li>Prepare a piece of Dragon skin with the scales still attached.</li>
                 <li>Heat up the scales by placing it in the undying fire of the Dragon.</li>
                 <li>Once the scales are sizzling hot, take the block of Dragon meat and sear all of the edges until golden.</li>
